<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/name_Hint"
        android:textColorHint="@android:color/white"
        app:boxBackgroundColor="#0288D1"
        app:boxStrokeColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapCharacters"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/branch_label"
        android:textColorHint="@android:color/white"
        app:boxBackgroundColor="#0288D1"
        app:boxStrokeColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/branchName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/roll_label"
        android:textColorHint="@android:color/white"
        app:boxBackgroundColor="#0288D1"
        app:boxStrokeColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rollTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/score_label"
        android:textColorHint="@android:color/white"
        app:boxBackgroundColor="#0288D1"
        app:boxStrokeColor="#FFFFFF">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/scoreTxt"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_btn_label" />

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/get_btn_label" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="56dp"
        android:id="@+id/btnUpdate"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Update Data" />

</LinearLayout>