<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorCards"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        app:contentPaddingBottom="8dp"
        app:contentPaddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#F4511E"
                android:textSize="24sp"
                tools:text="Rishabh" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/roll_txt" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rollTV"
                    style="@style/tvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1814" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/branch_txt" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/branchTV"
                    style="@style/tvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="AIIT" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/tvStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/marks_txt" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/marksTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/tvStyle"
                    tools:text="100" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>